# anycode

./: CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  build.sh  cliff.toml  install.sh  justfile
.github/workflows/: release.yml
docs/: custom-agent-profiles-requirements.md
docs/design/: argument-handling-redesign.md  env-injection-claude-code.md  error-handling-timeouts.md
src/: cli_mode.rs  lib.rs  main.rs
src/args/: assembler.rs  env_builder.rs  mod.rs  pipeline.rs  registry.rs
src/backend/: state.rs
src/config/: credentials.rs  loader.rs  mod.rs  types.rs
src/proxy/: health.rs  mod.rs  model_rewrite.rs  models.rs  router.rs  server.rs
src/pty/: manager.rs  resize.rs  session.rs
src/shim/: tmux.rs
src/ui/: app.rs  events.rs  input.rs  mod.rs  runtime.rs  (+1 more)
tests/: app_lifecycle.rs  args_pipeline.rs  backend_state.rs  claude_settings_manager.rs  cli_args.rs  clipboard.rs  concurrent_port_binding.rs  config_auth.rs  config_credentials.rs  config_loader.rs  copilot_byok_env.rs  copilot_mode_args.rs  e2e_workflow.rs  error_registry.rs  history_actor.rs  history_state.rs  integration_health.rs  ipc.rs  metrics_stream.rs  models_endpoint.rs  openai_wire_passthrough.rs  pipeline_integration.rs  pipeline_isolation.rs  pipeline_stages.rs  proxy_backend_switch.rs  proxy_error.rs  proxy_pool.rs  proxy_retry.rs  proxy_streaming.rs  proxy_timeout.rs  pty_actor.rs  pty_emulator_zero_size.rs  pty_passthrough.rs  pty_state.rs  request_parser_test.rs  restart_claude.rs  reverse_model_mapping.rs  session_token_auth.rs  settings_actor.rs  settings_persistence.rs  (+13 more)
(+12 files in other folders)
